<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="Android Figure Header"
        android:focusable="true"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:onClick="toasty"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toStartOf="@+id/iv_left_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_left_right" />

    <ImageView
        android:id="@+id/iv_left_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="left test icon"
        android:src="@android:drawable/ic_dialog_dialer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_header" />

    <ImageView
        android:id="@+id/iv_left_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="right test icon"
        android:src="@android:drawable/ic_dialog_dialer"
        app:layout_constraintEnd_toStartOf="@+id/iv_header"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_header">

        <EditText
            android:id="@+id/et_email"
            style="@style/default_margin_top"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:contentDescription="EMail Input"
            android:hint="E-Mail"
            android:inputType="textEmailAddress"
            android:nextFocusUp="@id/iv_header"
            android:text="android@thkru.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email">


        <EditText
            android:id="@+id/et_password"
            style="@style/default_margin_top"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:contentDescription="Password Input"
            android:hint="Password"
            android:inputType="textPassword"
            android:text="android" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.thkrue.cert.ui.LoginButton
        android:id="@+id/btn_login"
        style="@style/default_margin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Login Button"

        app:layout_constraintStart_toStartOf="@id/til_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_info" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Addition Information Field"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/til_password"
        app:layout_constraintTop_toBottomOf="@id/til_password"

        tools:text="Test"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>